2006-05-22  Tom Tromey  <tromey@redhat.com>

	* resource/gnu/classpath/tools/serialver/messages.properties: New
	file.
	* tools/gnu/classpath/tools/serialver/Messages.java: New file.
	* tools/gnu/classpath/tools/serialver/SerialVer.java (classes): New
	field.
	(classpath): Likewise.
	(run): New method.
	(main): Use it.
	(addFileURL): New method.
	(getClassLoader): Likewise.
	(printMessage): Likewise.

2006-05-22  Tom Tromey  <tromey@redhat.com>

	* tools/gnu/classpath/tools/serialver/SerialVer.java: New file.

2006-05-22  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/JTable.java (doLayout): In the column
	resize mode, only repaing the changed part of the table.
	(getLeftResizingBoundary): New method.

2006-05-22  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/naming/spi/InitialContextFactory.java,
	javax/naming/spi/InitialContextFactoryBuilder.java,
	javax/naming/spi/NamingManager.java,
	javax/naming/spi/ObjectFactory.java,
	javax/naming/spi/ResolveResult.java,
	javax/naming/spi/Resolver.java,
	javax/naming/spi/StateFactory.java: Documented.

2006-05-21  Tom Tromey  <tromey@redhat.com>

	PR classpath/27688:
	* tools/gnu/classpath/tools/jar/Extractor.java (allItems): Now
	a WorkSet.
	(initSet): Removed.
	(shouldExtract): Removed.
	(run): Updated.
	* tools/gnu/classpath/tools/jar/WorkSet.java: New file.
	* tools/gnu/classpath/tools/jar/Lister.java (readUntilEnd): New
	method.
	(listJar): Use it.
	(allItems): New field.
	(run): Initialize it.
	(listJar): Use it.

2006-05-22  Sven de Marothy  <sven@physto.se>

	* java/nio/CharBuffer.java
	(wrap): Fix bounds checking.

2004-08-26  Tom Tromey  <tromey@redhat.com>

	* java/io/OutputStream.java 
	(OutputStream): Implements Closeable, Flushable.

2006-04-02  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/io/ObjectOutputStream.java:
	(writeObject(Object)): Added enum support.
	(writeClassDescriptor(ObjectStreamClass)): Likewise.
	* java/io/ObjectStreamClass.java: